@@ -16,7 +16,7 @@
 	<url/>
 	<licenses>
 		<license/>
-	</licenses>
+	</licenses> 
 	<developers>
 		<developer/>
 	</developers>
@@ -42,6 +42,12 @@
 			<groupId>com.google.cloud</groupId>
 			<artifactId>google-cloud-vision</artifactId>
 			<version>3.31.0</version>
+		</dependency>
+		<!-- Google Cloud Storage dependency -->
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-storage</artifactId>
+			<version>2.29.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -124,6 +130,17 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<!-- Configuración para tests con Mockito -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						-XX:+EnableDynamicAgentLoading
+						-Djdk.instrument.traceUsage
+					</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
